<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/header_background"
        android:gravity="center"
        android:paddingTop="20dp"
        android:paddingBottom="10dp"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            android:background="@drawable/logo" />

        <TextView
            android:id="@+id/header_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/logo"
            android:textColor="#ffffff"
            android:textSize="12sp" />
    </LinearLayout>

    <EditText
        android:id="@+id/name"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:paddingLeft="10dp"
        android:layout_marginTop="20dp"
        android:hint="@string/name"
        android:textColor="@color/text_color"
        android:inputType="textPersonName"
        android:layout_below="@id/linearLayout"
        android:layout_alignLeft="@+id/password"
        android:layout_alignStart="@+id/password">
    <requestFocus />
</EditText>

    <TextView
        android:id="@+id/name_error"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:background="@color/error_text_background_color"
        android:contentDescription="@null"
        android:textColor="@color/error_text_color"
        android:text="@string/name_error"
        android:visibility="gone"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:paddingLeft="10dp"
        android:textColor="@color/text_color"
        android:layout_marginTop="20dp"
        android:hint="@string/email_id"
        android:inputType="textEmailAddress"
        android:layout_below="@+id/name"
        android:layout_alignLeft="@+id/password"
        android:layout_alignStart="@+id/password"/>

    <TextView
        android:id="@+id/email_error"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:background="@color/error_text_background_color"
        android:contentDescription="@null"
        android:textColor="@color/error_text_color"
        android:text="@string/email_error"
        android:visibility="gone"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:paddingLeft="10dp"
        android:textColor="@color/text_color"
        android:layout_below="@+id/email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/password_error"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:paddingLeft="10dp"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:background="@color/error_text_background_color"
        android:contentDescription="@null"
        android:textColor="@color/error_text_color"
        android:text="@string/password_error"
        android:visibility="gone"/>

    <EditText
        android:id="@+id/mob_no"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:paddingLeft="10dp"
        android:layout_marginTop="20dp"
        android:hint="@string/mob_no"
        android:inputType="phone"
        android:textColor="@color/text_color"
        android:layout_below="@+id/password"
        android:layout_alignLeft="@+id/password"
        android:layout_alignStart="@+id/password"/>

    <TextView
        android:id="@+id/mob_no_error"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:background="@color/error_text_background_color"
        android:contentDescription="@null"
        android:textColor="@color/error_text_color"
        android:text="@string/mob_no_error"
        android:visibility="gone"/>

    <Button

        android:id="@+id/sign_up"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:drawableRight="@drawable/arrow_sign_up"
        android:drawableEnd="@drawable/arrow_sign_up"
        android:paddingRight="60dp"
        android:paddingLeft="60dp"
        android:background="@drawable/signup_button"
        android:layout_below="@+id/mob_no"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/register_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sign_up"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="80dp"
        android:text="@string/register_user"
        android:textColor="@color/text_color"/>

    <TextView
        android:id="@+id/login_here"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sign_up"
        android:textColor="@color/text_color"
        android:text="@string/login_here"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@id/register_user"
        android:clickable="true"/>

    <TextView
        android:id="@+id/bottom_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_user"
        android:layout_centerHorizontal="true"
        android:text="@string/bottom_text"
        android:textColor="@color/text_color"
        android:layout_marginTop="5dp"/>

</RelativeLayout>